Turn the Qt*[Private]Config modules into .js files
Advantages:
  - The js files can already be used on project level.
  - The per-module-configs are nicely accessible via
    e.g. Qt.gui.config and Qt["gui-private"].config.
  - Its easy to deploy these files by the exporter functionality.

Change-Id: Iee54b7e196224bfa6625ff2de17af76dd2b1f42b
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -5,8 +5,8 @@
         "privateHeader": "src/corelib/global/qconfig_p.h",
         "publicPro": "mkspecs/qconfig.pri",
         "privatePro": "mkspecs/qmodule.pri",
-        "publicQbs": "qbs/modules/QtGlobalConfig/QtGlobalConfig.qbs",
-        "privateQbs": "qbs/modules/QtGlobalPrivateConfig/QtGlobalPrivateConfig.qbs",
+        "publicQbs": "qbs/imports/QtGlobalConfig/QtGlobalConfig.js",
+        "privateQbs": "qbs/imports/QtGlobalPrivateConfig/QtGlobalPrivateConfig.js",
         "qbsMultiplexCfg": "qbs/imports/QtMultiplexConfig/multiplexconfig.js",
         "qbsTargetProfile": "qbs/imports/QtTargetProfile.qbs",
         "qbsMetaProject": "qt.qbs"
