--- a/.qmake.conf
+++ b/.qmake.conf
@@ -1,7 +1,17 @@
+
+# Intentionally not `$$shadowed($$PWD)`.
+XD_BUILD_TREE=$$PWD
+CONFIG += QTDIR_build
+
 load(qt_build_config)
 CONFIG += warning_clean
 
 QT_SOURCE_TREE = $$PWD
-QT_BUILD_TREE = $$shadowed($$PWD)
+QT_BUILD_TREE = $$XD_BUILD_TREE
 
-MODULE_VERSION = 5.6.4
+# WARNING: below overrides header-include paths
+# (hence either don't change, or rename folders,
+# like "./include/QtCore/5.6.3" folder).
+MODULE_VERSION = 5.6.3
+# Or, set:
+MODULE_HEADER_VERSION = 5.6.3
