--- a/mkspecs/common/msvc-desktop.conf
+++ b/mkspecs/common/msvc-desktop.conf
@@ -11,6 +11,12 @@ isEmpty(MSC_VER)|isEmpty(MSVC_VER): error("Source mkspec must set both MSC_VER a
 
 include(angle.conf)
 
+# TRACE/mkspecs add: win32-msvc is required for qmake-script tests like "win32-msvc*: LIBS += advapi32.lib"
+CONFIG                 += win32-msvc
+
+# TRACE/mkspecs improve: even Windows NT has LFS (large-file-support), at least for NTFS.
+DEFINES                 += QT_LARGEFILE_SUPPORT
+
 MAKEFILE_GENERATOR      = MSVC.NET
 QMAKE_PLATFORM          = win32
 QMAKE_COMPILER          = msvc
@@ -18,9 +24,19 @@ CONFIG                 += incremental flat precompile_header autogen_precompile_
 DEFINES                += UNICODE WIN32
 QMAKE_COMPILER_DEFINES += _MSC_VER=$$MSC_VER _WIN32
 contains(QMAKE_TARGET.arch, x86_64) {
-    DEFINES += WIN64
+    CONFIG             += is64bit
+    DEFINES            += _AMD64_ WIN64 _M_X64
     QMAKE_COMPILER_DEFINES += _WIN64
+
+    ## TRACE/mkspecs improve: we disable other machines types like x86 by setting "/MACHINE:X64",
+    ## to obtain compile error with incompatible object files (i.e. x86 "*.obj" files),
+    ## where QMAKE_LFLAGS must end with 'ARM, EBC, IA64, MIPS, MIPS16, MIPSFPU, MIPSFPU16, SH4, THUMB, X64, or X86
+    QMAKE_LFLAGS        = /MACHINE:X64
+
+} else {
+    QMAKE_LFLAGS        = /MACHINE:X86
 }
+
 
 QMAKE_CC                = cl
 QMAKE_LEX               = flex
@@ -28,8 +44,21 @@ QMAKE_LEXFLAGS          =
 QMAKE_YACC              = bison -y
 QMAKE_YACCFLAGS         = -d
 QMAKE_CFLAGS            = -nologo -Zc:wchar_t
+
+#
+# Other QMAKE_CFLAGS and QMAKE_CXXFLAGS options:
+# ```
+# -Zm200 # Disables convert from "wchar_t[n]" to "wchar_t *",
+#        # causing many errors, like for `LoadLibrary(L"user32")`.
+#
+# /showIncludes # Logs ANY include-hierarchy (even if no error/warning present),
+#               # also if jom.exe is used, parallel compile-logs mix confusingly.
+# ```
 QMAKE_CFLAGS_WARN_ON    = -W3
 QMAKE_CFLAGS_WARN_OFF   = -W0
+
+# We optimize for speed "-O2", one could optimize for debug instead with "-Od".
+#
 QMAKE_CFLAGS_RELEASE    = -O2 -MD
 QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += -O2 -MD -Zi
 QMAKE_CFLAGS_DEBUG      = -Zi -MDd
@@ -67,7 +96,14 @@ QMAKE_RUN_CXX_IMP       = $(CXX) -c $(CXXFLAGS) $(INCPATH) -Fo$@ $<
 QMAKE_RUN_CXX_IMP_BATCH = $(CXX) -c $(CXXFLAGS) $(INCPATH) -Fo$@ @<<
 
 QMAKE_LINK              = link
-QMAKE_LFLAGS            = /NOLOGO /DYNAMICBASE /NXCOMPAT
+QMAKE_LFLAGS           += /NOLOGO /DYNAMICBASE /NXCOMPAT
+
+# NOTE: we disable the default "/INCREMENTAL" mode,
+# since it sacrifices binary size and speed to get faster subsequent compiles.
+#
+# MSDN: an incrementally linked file is larger because of padding of code/data,
+# and may contain jump thunks to handle relocation of functions to new addresses.
+#
 QMAKE_LFLAGS_RELEASE    = /INCREMENTAL:NO
 QMAKE_LFLAGS_RELEASE_WITH_DEBUGINFO = /DEBUG /OPT:REF /INCREMENTAL:NO
 QMAKE_LFLAGS_DEBUG      = /DEBUG
@@ -101,4 +137,6 @@ VCPROJ_KEYWORD          = Qt4VSv1.0
 
 include(msvc-base.conf)
 
+
+QMAKE_MSC_VER = $$MSC_VER
 unset(MSC_VER)
