QMake: support copy_file and copy_dir built-ins and QMAKE_WATCH mode. Also added binary-realease to repo.

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,10 @@ bin/moc*
 bin/makeqpf*
 bin/pixeltool*
 bin/qmake*
+# Windows.
+!bin/qmake.exe
+# Linux.
+!bin/qmake
 bin/qdoc*
 bin/qt3to4*
 bin/qttracereplay*
