QMake: support copy_file and copy_dir built-ins and QMAKE_WATCH mode. Also added binary-realease to repo.

--- a/mkspecs/common/msvc-desktop.conf
+++ b/mkspecs/common/msvc-desktop.conf
@@ -10,12 +10,15 @@ isEmpty(MSC_VER)|isEmpty(MSVC_VER): error("Source mkspec must set both MSC_VER a
 #
 
 include(angle.conf)
-
 # TRACE/mkspecs add: win32-msvc is required for qmake-script tests like "win32-msvc*: LIBS += advapi32.lib"
 CONFIG                 += win32-msvc
 
 # TRACE/mkspecs improve: even Windows NT has LFS (large-file-support), at least for NTFS.
 DEFINES                 += QT_LARGEFILE_SUPPORT
+
+## TRACE/qmake Add X1: we use "idc" instead of "mt" to directly embed the manifest #2,
+## and by default, below line disables using "mt.exe" for manifest resource update.
+QMAKE_MANIFEST_FLAGS = /MT:NO
 
 MAKEFILE_GENERATOR      = MSVC.NET
 QMAKE_PLATFORM          = win32
