--- a/mkspecs/win32-msvc2010/qmake.conf
+++ b/mkspecs/win32-msvc2010/qmake.conf
@@ -6,5 +6,6 @@
 
 MSC_VER                 = 1600
 MSVC_VER                = 10.0
+QMAKE_TARGET.arch       = x86 #although x86 is default we set this for qmake_watch
 include(../common/msvc-desktop.conf)
 load(qt_config)
